--- a/mysites.html
+++ b/mysites.html
@@ -34,7 +34,7 @@
                 <img class="page" src="https://cdn-icons-png.freepik.com/512/3067/3067513.png"/>
                 <h3>Project Fireworks</h3>
                 <p>it is about a fireworks shop</p>
-                <a class="project" target="_blank" href=" https://anasbuildingwebsites.github.io/eesa-project-3/ Rasikha - https://rasikha2312.github.io/Individual_project/">View My Project</a>
+                <a class="project" target="_blank" href=" https://anasbuildingwebsites.github.io/eesa-project-3/">View My Project</a>
             </article>
         </section>
     </main>
