--- a/mysites.html
+++ b/mysites.html
@@ -21,7 +21,7 @@
                 <img class="page" src="https://cdn-icons-png.freepik.com/512/3067/3067513.png"/>
                 <h3>Project Flash</h3>
                 <p>it is about the flash</p>
-                <a class="project" target="_blank" href="https://anshrawr.wixsite.com/my-site-3">View My Project</a>
+                <a class="project" target="_blank" href="https://eesaputra.wixsite.com/my-site-5">View My Project</a>
             </article>
            <article class="projects">
                 <img class="page" src="https://cdn-icons-png.freepik.com/512/3067/3067513.png"/>
